# hmx_common_csharp

./: CMakeLists.txt  README.md
plc_conn/: CMakeLists.txt  IPLC.cs  main.cs
